welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:3: error: '(' expected but identifier found.
  if speed <=60 return 0
     ^caughtSpeeding:4: error: '(' expected but identifier found.
  if speed <= 80 return 1
     ^caughtSpeeding:5: error: illegal start of simple expression
  else return 2}
               ^